syntax = "proto3";
option java_multiple_files = true;
option go_package = "zpd.proto";
package zpd.common.proto;

message Status {
  //code = 1 means success
  int32 code = 1;
  string error = 2;
}

message MessageResponse {
  Status status = 1;
}